test/files/neg/macro-invalidusage-methodvaluesyntax/Impls_1.scala
import scala.reflect.macros.{Context => Ctx}

object Impls {
  def foo(c: Ctx) = {
    import c.universe._
    c.Expr[Unit](q"""println("it works")""")
  }
}